--- a/src/napari_turing/napari.yaml
+++ b/src/napari_turing/napari.yaml
@@ -2,20 +2,9 @@ name: napari-turing
 display_name: Turing Patterns
 contributions:
   commands:
-    - id: napari-turing.make_qwidget
-      python_name: napari_turing._widget:ExampleQWidget
-      title: Make example QWidget
-    - id: napari-turing.make_magic_widget
-      python_name: napari_turing._widget:example_magic_widget
-      title: Make example magic widget
-    - id: napari-turing.make_func_widget
-      python_name: napari_turing._widget:example_function_widget
-      title: Make example function widget
+    - id: napari-turing.TuringViewer
+      python_name: napari_turing._widget:TuringViewer
+      title: Turing Patterns
   widgets:
-    - command: napari-turing.make_qwidget
-      display_name: Example QWidget
-    - command: napari-turing.make_magic_widget
-      display_name: Example Magic Widget
-    - command: napari-turing.make_func_widget
-      autogenerate: true
-      display_name: Example Function Widget
+    - command: napari-turing.TuringViewer
+      display_name: Turing Patterns
