--- a/setup.cfg
+++ b/setup.cfg
@@ -33,8 +33,10 @@ packages = find:
 install_requires =
     numpy
     scipy
+    scikit-image
     magicgui
     qtpy
+    napari
 
 python_requires = >=3.8
 include_package_data = True
